<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">WorkoutScheduler</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="followworkout">Follow Workout</string>
    <string name="editworkout">Edit Workout</string>
    <string name="seeworkouts">See Workouts</string>
    <string name="title_activity_follow_workout">FollowWorkout</string>
    <string name="title_activity_see_workouts">SeeWorkouts</string>
    <string name="title_activity_edit_workout">EditWorkout</string>
    <string name="name">Name:</string>
    <string name="description">Description:</string>
    <string name="nameNoCol">Name</string>
    <string name="descriptionNoCol">Description</string>
    <string name="setRestTime">Set Rest Time:</string>
    <string name="exerciseRestTime">Exercise Rest Time:</string>
    <string name="newExercise">New Exercise</string>
    <string name="submitWorkout">Submit Workout</string>
    <string name="editExercise">Edit Exercise</string>
    <string name="title_activity_submit_workout">SubmitWorkout</string>
    <string name="title_activity_add_exercise">AddExercise</string>
    <string name="submit">Submit</string>
    <string name="workoutSubmitted">Workout Submitted</string>
    <string name="returnHome">Return Home</string>
    <string name="workoutAdded">Workout Added</string>
    <string name="back">Back</string>
    <string name="repCount">Rep Count:</string>
    <string name="repCountNoCol">Rep Count</string>
    <string name="addSet">Add Set</string>
    <string name="title_activity_reject_workout">RejectWorkout</string>
    <string name="workoutRejected">Workout Rejected</string>
    <string name="title_activity_select_workout">SelectWorkout</string>
    <string name="selectWorkout">Select Workout</string>
    <string name="newWorkout">New Workout</string>
    <string name="removeWorkout">Remove Workout</string>
    <string name="title_activity_remove_workout">RemoveWorkout</string>
    <string name="removeConfirm">Remove This Workout?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="title_activity_edit_exercise">EditExercise</string>
    <string name="repWeight">Rep Weight:</string>
    <string name="repWeightNoCol">Rep Weight</string>
    <string name="removeExercise">Remove Exercise</string>
    <string name="editSets">Edit Sets</string>
    <string name="title_activity_edit_sets">EditSets</string>
    <string name="newSet">New Set</string>
    <string name="title_activity_add_set">AddSet</string>
    <string name="removeSet">Remove Set</string>
    <string name="title_activity_remove_set">RemoveSet</string>
    <string name="title_activity_remove_exercise">RemoveExercise</string>
    <string name="title_activity_reject_exercise">RejectExercise</string>
    <string name="title_activity_submit_exercise">SubmitExercise</string>
    <string name="title_activity_reject_set">RejectSet</string>
    <string name="title_activity_submit_set">SubmitSet</string>
    <string name="setAccepted">Set Accepted</string>
    <string name="removeSetConfirm">Remove This Set?</string>
    <string name="removeExerciseConfirm">Remove This Exercise?</string>
    <string name="workoutAccepted">Workout Accepted</string>
    <string name="exerciseAccepted">Exercise Accepted</string>
    <string name="exerciseRejected">Exercise Rejected</string>

</resources>
