<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Homepage" >

    <Button
        android:id="@+id/editworkoutbtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="@string/editworkout"
        android:onClick="editWorkout" />

    <Button
        android:id="@+id/seeworkoutbtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="76dp"
        android:text="@string/seeworkouts"
        android:onClick="seeWorkouts" />

    <Button
        android:id="@+id/followworkoutbtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/editworkoutbtn"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="64dp"
        android:text="@string/followworkout"
        android:onClick="followWorkout" />

</RelativeLayout>
